MyEditFES/styles/main.css
/* ... */
/* Notes
The box-sizing property controls how the dimensions of an element are calculated
The "*" selector targets all elements on the web page.
*::before targets pseudo-elements that are inserted before the content of an element.
*::after targets pseudo-elements that are inserted after the content of an element.

Purpose:
The purpose of applying box-sizing: border-box; to all elements, including pseudo-elements,
is to create a more predictable and consistent layout. It helps to avoid unexpected spacing
and sizing issues that might occur due to the default content-box behavior.

*/

body {
	margin: 0;
        background-image: linear-gradient(
            to bottom,
            #121212,
            #000044

    );
	font-family: 'DM Sans', sans-serif;
	font-weight: 400;
}




/* navigation styles start here */

header {

    /*using the variable here*/
    background: var(--background);
    text-align: center;

    /*keeps nav in the same place the whole time */
    /*to keep it where it is use relative*/
    position: fixed;

    /*so make sure it is on top of everything*/
    z-index: 999;
    width: 100%;
}

.nav-toggle {
    display: none;
    /*position: absolute;*/
    /*top: -9999px ;*/
    /*left: -9999px ;*/
}

/*the hamburger icon*/
.nav-toggle-label {
    /*border: solid red;*/
    position: absolute;
    top: 0;
    left: 0;

    /* has to match with nav li */
    margin-left: 1em;
    font-weight: bold;

    height: 100%;
    /*centering the icon in the height*/
    display: flex;
    align-items: center;
}

/*making and customizing the icon*/

/*can have a animation on the icon for more professional look*/

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    /*mutable*/
    background: white;
    height: 2px;
    width: 2em;
    border-radius: 2px;
    position: relative;
}



.nav-toggle-label span::before,
.nav-toggle-label span::after {
    /*NEEDED, it defaults to none*/
    content: '';
    position: absolute;
}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}

/* Hover styles */
.nav-toggle-label:hover span,
.nav-toggle-label:hover span::before,
.nav-toggle-label:hover span::after {
    background: slategrey; /* Change to your desired hover color */
    transform: scale(1.1); /* Add a slight scale effect on hover */
}

.nav-toggle-label:hover span::before {
    bottom: 8px;
}

.nav-toggle-label:hover span::after {
    top: 8px;
}
/*end of hover styles*/



/*end of making and customizing the icon*/

/*actual contents of the nav*/

nav {
    position: absolute;
    text-align: left;
    top: 100%;
    left: 0;
    /*can make it transparent*/
    background: var(--background);
    width: 100%;

    /*to not display the nav*/
    /*display: none;*/

    /*alternative approach to not display the nav*/
    transform: scale(1, 0);

    /*will transform from the top to bottom*/
    transform-origin: top;

    /*to stop the glitch after the page is loaded turn to zero*/
    transition: transform 400ms ease-in-out;
}

/*Notes
transform: This is the CSS property that allows
you to apply transformations to an element.

scale(): This is a function within the transform
property that is used to scale an element.

1 means no scaling along the X-axis, so the element
retains its original width.

0 means the element is completely collapsed along
the Y-axis, effectively making it INVISIBLE in terms of height.
*/



nav ul {
    /*removing margin and padding*/
    margin: 0;
    padding: 0;
    /*removing the bullets*/
    list-style: none;
}

nav li {
    /*not needed too much, can mess around with*/
    margin-bottom: 1em;
    margin-left: 1em;
}

nav a {
    color: white;
    /*removing the hyperlink look*/
    text-decoration: none;
    /*changeable*/
    font-size: 1.2rem;

    /*text-transform: uppercase;*/

    /*applies to the links*/
    opacity: 0;
    /*can modify the milliseconds*/
    transition: opacity 150ms ease-in-out;
}



nav a:hover {
    /*can have another color*/
    color: #4169E1;
}


.nav-toggle:checked ~ nav {
    /*will make it reappear*/
    transform: scale(1,1);

    /*used only when nav is not displayed*/
    /*display: block;*/


}

/*Notes
.nav-toggle is a class selector targeting an HTML element,
an <input> element with a class of nav-toggle.

:checked is a pseudo-class selector that matches the element
when it's in a checked state. For checkboxes and radio buttons,
this selector is used to target the element when it's selected or checked.

The "~" symbol is a general sibling combinator.
It selects all sibling elements that share the same parent and come
after the specified element.
*/

.nav-toggle:checked ~ nav a {
    opacity: 1;
    /*can modify the milliseconds*/
    transition: opacity 250ms ease-in-out 250ms;
}


/*end of hamburger editing*/

  /* FES Logo styles to keep it a reasonable size */
.logo-tab img {
    /*can modify the padding to make the nav bigger or smaller*/
    padding: 9px;
    max-width: 180px;
    height: auto;
}

.imgSizing {
    /*can modify the padding to make the nav bigger or smaller*/
    /*padding: 9px;*/
    width: 100%;
    max-height: 100vh;
    /*height: auto;*/
}

/*video adjustments*/

.video-container {
    /*optional if you dont want the video to start off beneath the nav*/
    /*top: 53px;*/
    position: initial;
    width: 100%;
    /*editing the size of the video*/
    max-height: 80vh;
}

video {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.centered-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-97%, -50%);
    text-align: center;
    color: white;
    /*font-size: 250%;*/
    font-size: 4.5vw;
    font-weight: bold;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
}
/* ... */

